--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -19,6 +19,10 @@ h2 {
 input {
     height: 20px;
     width: 500px;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
 }
 
 button:focus {
