--- a/semana3/portifolio/home.css
+++ b/semana3/portifolio/home.css
@@ -98,4 +98,20 @@ a {
     position: absolute;
     bottom: 0px;
     width: 100%;
+    text-align: center;
+}
+
+.rodape div {
+    display: inline;
+}
+
+.rodape p {
+    padding: 10px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.rodape img {
+    max-width: 20px;
+    margin: 0;
 }
