--- a/semana3/portifolio/sobre.css
+++ b/semana3/portifolio/sobre.css
@@ -29,11 +29,9 @@ a {
 }
 
 .menu {
-    display: inline;
     text-align: right;
-    position: relative;
-    top: 10px;
-    right: 10px;
+    top: 30px;
+    margin: 12px;
 }
 
 #contato {
