--- a/semana3/portifolio/index.css
+++ b/semana3/portifolio/index.css
@@ -34,11 +34,14 @@ a {
     margin: 12px;
 }
 
+nav {
+    display: inline;
+    text-align: right;
+}
+
 #contato {
     background-color: rgb(253, 253, 253);
 }
-
-/* ******************************************************** */
 
 .container {
     position: relative;
@@ -48,7 +51,7 @@ a {
     text-align: center;
 }
 
-.container h1, h2, h3, h4, p, li {
+.container h1, h2, h3, h4, p {
     padding: 5px;
 }
 
@@ -58,27 +61,43 @@ a {
 }
 
 
+.linha img {
+    max-width: 450px;
+    max-height: 450px;
+}
+
 .container > div {
     display: inline;
 }
 
-.container li {
-    margin-top: 20px;
+.linha {
+    display: flex;
+    position: relative;
+    top: 100px;
+    width: 900px;
+    margin: 50px auto;
 }
 
-.container ul, ol {
-    text-align: left;
+.coluna {
+    flex: 50%;
 }
 
-
-.texto-descritivo {
+#texto-descritivo {
     text-align: justify;
     margin-left: 20px;
-    font-style: oblique;
 }
 
+#botão-portfolio {
+    background-color: lightsalmon;
+    height: 50px;
+    width: 200px;
+    font-size: medium;
+    border-radius: .25rem;
+}
 
-/* ******************************************************** */
+#botão-portfolio:hover {
+    background-color: rgba(255, 160, 122, 0.692);
+}
 
 .rodape {
     background-color: orange;
