--- a/semana3/portifolio/index.css
+++ b/semana3/portifolio/index.css
@@ -43,6 +43,8 @@ nav {
     background-color: rgb(253, 253, 253);
 }
 
+/* ******************************************************** */
+
 .container {
     position: relative;
     top: 100px;
@@ -98,6 +100,8 @@ nav {
 #botão-portfolio:hover {
     background-color: rgba(255, 160, 122, 0.692);
 }
+
+/* ******************************************************** */
 
 .rodape {
     background-color: orange;
