--- a/semana3/portifolio/sobre.css
+++ b/semana3/portifolio/sobre.css
@@ -38,6 +38,8 @@ a {
     background-color: rgb(253, 253, 253);
 }
 
+/* ******************************************************** */
+
 .container {
     position: relative;
     top: 100px;
@@ -75,6 +77,7 @@ a {
     font-style: oblique;
 }
 
+/* ******************************************************** */
 
 .rodape {
     background-color: orange;
