--- a/semana3/portifolio/portfolio.css
+++ b/semana3/portifolio/portfolio.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgb(223, 223, 223);
+    position: relative;
 }
 
 a {
@@ -17,7 +18,7 @@ a {
 .cabecalho {
     background-color: lightsalmon;
     height: 80px;
-    position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
 }
@@ -42,7 +43,7 @@ a {
 
 .container {
     position: relative;
-    top: 100px;
+    top: 20px;
     width: 900px;
     margin: 50px auto;
     text-align: center;
@@ -50,6 +51,7 @@ a {
 
 .container h1, h2, h3, h4, p, li {
     padding: 5px;
+    position: relative;
 }
 
 .container img {
@@ -76,7 +78,6 @@ a {
     margin-left: 20px;
     font-style: oblique;
 }
-
 
 /* ******************************************************** */
 
