--- a/semana3/portifolio/index.css
+++ b/semana3/portifolio/index.css
@@ -17,7 +17,7 @@ a {
 .cabecalho {
     background-color: lightsalmon;
     height: 80px;
-    position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
 }
@@ -47,7 +47,7 @@ nav {
 
 .container {
     position: relative;
-    top: 100px;
+    top: 20px;
     width: 900px;
     margin: 50px auto;
     text-align: center;
@@ -75,7 +75,7 @@ nav {
 .linha {
     display: flex;
     position: relative;
-    top: 100px;
+    top: 20px;
     width: 900px;
     margin: 50px auto;
 }
