--- a/semana3/portfolio/projetos.css
+++ b/semana3/portfolio/projetos.css
@@ -7,8 +7,7 @@
 
 body {
     background-color: rgb(223, 223, 223);
-    /* height: auto;
-    position: relative; */
+    height: auto;
 }
 
 a {
@@ -45,9 +44,9 @@ a {
 .container {
     position: relative;
     top: 20px;
-    height: auto;
     width: 900px;
-    margin: 50px auto;
+    height: auto;
+    margin: 10px auto;
     text-align: center;
 }
 
@@ -56,8 +55,8 @@ a {
 }
 
 .container img {
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 800px;
+    max-height: 700px;
 }
 
 
@@ -65,6 +64,22 @@ a {
     display: inline;
 }
 
+
+.container-descricao {
+    height: auto;
+    width: 800px;
+    position: relative;
+    margin: 0px auto;
+    text-align: justify;
+}
+
+.container-descricao li {
+    margin-left: 50px;
+}
+
+#link-descricao {
+    text-decoration: underline;
+}
 
 /* ******************************************************** */
 
