Colocado exercício de responsividade dentro da pasta certa

--- a/semana4/responsividade/index.css
+++ b/semana4/responsividade/index.css
@@ -110,3 +110,46 @@ footer {
     background-color: rgb(68, 68, 68);
     color: whitesmoke;
 }
+
+@media screen and (max-width: 450px) {
+    header {
+        padding: 10px;
+        height: 50px;
+    }
+    main > a {
+        margin: 15px;
+    }
+    
+    .card-video {
+        width: 300px;
+        height: 280px;
+    }
+
+    .card-video > h2 {
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    header {
+        padding: 10px;
+        height: 50px;
+    }
+
+    .barra-busca input {
+        width: 150px;
+    }
+
+    main > a {
+        margin: 10px;
+    }
+    
+    .card-video {
+        width: 250px;
+        height: 250px;
+    }
+
+    .card-video > h2 {
+        font-size: 1.2em;
+    }
+}
