--- a/semana4/responsividade/videos.css
+++ b/semana4/responsividade/videos.css
@@ -65,40 +65,8 @@ main {
     max-width: 80%;
     margin: 20px auto;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
-
-}
-
-main > a {
-    margin: 30px;
-    will-change: transform;
-    transition: transform 450ms;
-}
-
-main > a:hover {
-    transition: transform 125ms;
-    transform: translateY(-10px);
-}
-
-.card-video {
-    height: 350px;
-    width: 400px;
-    display: flex;
     flex-direction: column;
-    box-shadow: 2px 2px 5px 2px lightgray;
-}
-
-.card-video img {
-    width: 100%;
-    max-height: 80%;
-}
-
-.card-video h2 {
-    margin-left: 15px;
-    margin-top: 20px;
-    color: black;
+    align-items: center;
 }
 
 /* ********************************* */
