Concluído desafio aula 17

--- a/semana5/introducao-react/labetube-react/src/App.css
+++ b/semana5/introducao-react/labetube-react/src/App.css
@@ -1,17 +1,10 @@
-/* body {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-} */
-
-
 .tela-inteira {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  display: grid;
+  grid-template-rows: 80px 1fr 60px;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 header {
@@ -20,11 +13,9 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 50px;
-  height: 10%;
 }
 
 main {
-  min-height: 80%;
   display: flex;
 }
 
@@ -36,84 +27,60 @@ main {
 
 .botoes-menu-vertical {
   list-style-type: none;
+  margin-right: 20px;
+}
+
+.menu-vertical ul {
+  padding-left: 20px;
 }
 
 .painel-de-videos {
-  padding-left: 20px;
-  padding-top: 20px;
-  flex-grow: 1;
   display: grid;
-  grid-template-columns: repeat(4, 24.8% 0.2%);
-  grid-template-rows: repeat(4, 270px 20px);
+  grid-template-columns: 1fr 250px;
+  gap: 20px;
+  padding: 20px;
+  max-width: 1700px;
+  margin: 0 auto;
 }
 
-.media1 {
-  grid-column-start: 1;
-  grid-row-start: 1;
+.box-video-principal > img {
+  max-width: 100%;
+  min-width: 350px;
+  display: block;
 }
 
-.media2 {
-  grid-column-start: 3;
-  grid-row-start: 1;
+.box-sidebar {
+  margin-bottom: 40px;
+  box-shadow: 0px 0px 5px lightgray;
 }
 
-.media3 {
-  grid-column-start: 5;
-  grid-row-start: 1;
+.box-sidebar > img {
+  max-width: 100%;
 }
-
-.media4 {
-  grid-column-start: 7;
-  grid-row-start: 1;
-}
-
-.media5 {
-  grid-column-start: 1;
-  grid-row-start: 3;
-}
-
-.media6 {
-  grid-column-start: 3;
-  grid-row-start: 3;
-}
-
-.media7 {
-  grid-column-start: 5;
-  grid-row-start: 3;
-}
-
-.media8 {
-  grid-column-start: 7;
-  grid-row-start: 3;
-}
-
-
-.box-pagina-principal {
-  display: grid;
-  grid-template-rows: 3fr 1fr;
-  grid-template-columns: 1fr;
-  border-style: solid;
-  border-width: thin; 
-  align-items: start;
-  justify-items: stretch;
-}
-
 
 footer {
-  height: 10%;
   background-color: grey;
-  margin: 0;
-  padding: 0;
+  padding: 20px;
   display: flex;
   align-items: center;
 }
 
-.box-pagina-principal > img {
-  width: 100%;
-  height: 200px;
-}
-
 h4 {
-  margin-left: 20px;
+  padding: 10px;
+  margin-top: 0;
 }
 
+@media screen and (max-width: 780px) {
+  .painel-de-videos {
+    display: flex;
+    flex-wrap: wrap; 
+  }
+  .sidebar {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .box-sidebar {
+    width: 150px;
+    margin: 10px
+  }
+}
